LegUp/214_benchmarks/extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main/log.txt
# annotate loop labels
../../../mark_labels.pl extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.c > extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main_labeled.c
# produces pre-link time optimization binary bitcode: extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.prelto.bc
clang extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main_labeled.c -emit-llvm -c -fno-builtin -m32 -I ../../../lib/include/ -I /usr/include/i386-linux-gnu -O3 -o extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main.prelto.1.bc
extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main_labeled.c:39:17: error: expected identifier or '('
  const float (*)[2] x;
                ^
extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main_labeled.c:40:11: error: expected identifier or '('
  float (*)[2][2] phi;
          ^
extr_.FFmpeglibavcodecsbrdsp.c_sbr_autocorrelate_c_with_main_labeled.c:41:23: error: use of undeclared identifier 'x'
  sbr_autocorrelate_c(x, phi);
                      ^
3 errors generated.
make: *** [all] Error 1
